--- a/wikipendium/wiki/templates/base.html
+++ b/wikipendium/wiki/templates/base.html
@@ -1,64 +1,64 @@
 <!DOCTYPE html>
 <html>
 
-<head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="apple-mobile-web-app-capable" content="yes" />
-    <meta name="apple-mobile-web-app-status-bar-style" content="black">
-    <meta property=og:site_name content="Wikipendium" />
-    {% block meta %}
-    {% endblock %}
+    <head>
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="apple-mobile-web-app-capable" content="yes" />
+        <meta name="apple-mobile-web-app-status-bar-style" content="black">
+        <meta property=og:site_name content="Wikipendium" />
+        {% block meta %}
+        {% endblock %}
 
-    <title>{% block title %}{% endblock %} Wikipendium</title>
+        <title>{% block title %}{% endblock %} Wikipendium</title>
 
-    {% load compress %}
-    {% compress css %}
-    <link rel=stylesheet href={{STATIC_URL}}css/helium.css>
-    {% load all_scss_files %}
-    {% all_scss_files %}
-    <link rel=stylesheet href={{STATIC_URL}}octicons/octicons.css />
-    <link rel=stylesheet href={{STATIC_URL}}codemirror/codemirror.css />
-    <link rel=stylesheet href={{STATIC_URL}}codemirror/dialog.css />
-    <link rel=stylesheet href={{STATIC_URL}}codemirror/wikipendium.css />
-    <link href="{{STATIC_URL}}google-code-prettify/prettify.css?autoload=false" rel="stylesheet" />
-    <link rel=stylesheet href={{STATIC_URL}}chosen/chosen.min.css />
-    {% block css %}
-    {% endblock %}
-    {% endcompress %}
+        {% load compress %}
+        {% compress css %}
+        <link rel=stylesheet href={{STATIC_URL}}css/tailwind.css>
+        {% load all_scss_files %}
+        {% all_scss_files %}
+        <link rel=stylesheet href={{STATIC_URL}}octicons/octicons.css />
+        <link rel=stylesheet href={{STATIC_URL}}codemirror/codemirror.css />
+        <link rel=stylesheet href={{STATIC_URL}}codemirror/dialog.css />
+        <link rel=stylesheet href={{STATIC_URL}}codemirror/wikipendium.css />
+        <link href="{{STATIC_URL}}google-code-prettify/prettify.css?autoload=false" rel="stylesheet" />
+        <link rel=stylesheet href={{STATIC_URL}}chosen/chosen.min.css />
+        {% block css %}
+        {% endblock %}
+        {% endcompress %}
 
-    <script src=//cdnjs.cloudflare.com/ajax/libs/jquery/1.10.1/jquery.min.js></script>
+        <script src=//cdnjs.cloudflare.com/ajax/libs/jquery/1.10.1/jquery.min.js></script>
 
-    {% compress js %}
-    <script src={{STATIC_URL}}js/moment.min.js></script>
-    <script src={{STATIC_URL}}js/bootstrap.min.js></script>
-    <script src={{STATIC_URL}}js/jquery.mousewheel.js></script>
-    <script src={{STATIC_URL}}codemirror/codemirror.min.js></script>
-    <script src={{STATIC_URL}}codemirror/multiplex.custom.js></script>
-    <script src={{STATIC_URL}}codemirror/mathjax.js></script>
-    <script src={{STATIC_URL}}codemirror/search.js></script>
-    <script src={{STATIC_URL}}codemirror/searchcursor.js></script>
-    <script src={{STATIC_URL}}codemirror/dialog.js></script>
-    <script src={{STATIC_URL}}codemirror/inline-attachment.js></script>
-    <script src={{STATIC_URL}}codemirror/codemirror.inline-attachment.js></script>
-    <script src="{{STATIC_URL}}google-code-prettify/prettify.js"></script>
-    <script src="{{STATIC_URL}}chosen/chosen.jquery.min.js"></script>
-    <script src="{{STATIC_URL}}js/jquery.ba-throttle-debounce.min.js"></script>
-    <script src={{STATIC_URL}}js/script.js></script>
-    {% block js %}
-    {% endblock %}
-    {% endcompress %}
+        {% compress js %}
+        <script src={{STATIC_URL}}js/moment.min.js></script>
+        <script src={{STATIC_URL}}js/bootstrap.min.js></script>
+        <script src={{STATIC_URL}}js/jquery.mousewheel.js></script>
+        <script src={{STATIC_URL}}codemirror/codemirror.min.js></script>
+        <script src={{STATIC_URL}}codemirror/multiplex.custom.js></script>
+        <script src={{STATIC_URL}}codemirror/mathjax.js></script>
+        <script src={{STATIC_URL}}codemirror/search.js></script>
+        <script src={{STATIC_URL}}codemirror/searchcursor.js></script>
+        <script src={{STATIC_URL}}codemirror/dialog.js></script>
+        <script src={{STATIC_URL}}codemirror/inline-attachment.js></script>
+        <script src={{STATIC_URL}}codemirror/codemirror.inline-attachment.js></script>
+        <script src="{{STATIC_URL}}google-code-prettify/prettify.js"></script>
+        <script src="{{STATIC_URL}}chosen/chosen.jquery.min.js"></script>
+        <script src="{{STATIC_URL}}js/jquery.ba-throttle-debounce.min.js"></script>
+        <script src={{STATIC_URL}}js/script.js></script>
+        {% block js %}
+        {% endblock %}
+        {% endcompress %}
 
-    <link rel="apple-touch-icon" href="{{STATIC_URL}}apple-touch/icon-57x57.png" />
-    <link rel="apple-touch-icon" href="{{STATIC_URL}}apple-touch/icon-72x72.png" sizes="72x72" />
-    <link rel="apple-touch-icon" href="{{STATIC_URL}}apple-touch/icon-114x114.png" sizes="114x114" />
-    <link rel="shortcut icon" href="{{STATIC_URL}}images/favicon.png" />
+        <link rel="apple-touch-icon" href="{{STATIC_URL}}apple-touch/icon-57x57.png" />
+        <link rel="apple-touch-icon" href="{{STATIC_URL}}apple-touch/icon-72x72.png" sizes="72x72" />
+        <link rel="apple-touch-icon" href="{{STATIC_URL}}apple-touch/icon-114x114.png" sizes="114x114" />
+        <link rel="shortcut icon" href="{{STATIC_URL}}images/favicon.png" />
 
-    <link href="{{STATIC_URL}}opensearch/opensearch.xml" rel="search" type="application/opensearchdescription+xml" title="wikipendium.no" />
+        <link href="{{STATIC_URL}}opensearch/opensearch.xml" rel="search" type="application/opensearchdescription+xml" title="wikipendium.no" />
 
-    {% if mathjax %}
-    <script type="text/x-mathjax-config">
-    MathJax.Hub.Config({
+        {% if mathjax %}
+        <script type="text/x-mathjax-config">
+            MathJax.Hub.Config({
       TeX: {
         extensions: ['AMSmath.js', 'AMSsymbols.js']
       },
@@ -71,152 +71,145 @@
         linebreaks: {automatic: true, width: "container"}
       }
     });
-    </script>
-    <script type="text/javascript" async src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.1/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
-    {% endif %}
-</head>
+        </script>
+        <script type="text/javascript" async src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.1/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
+        {% endif %}
+    </head>
 
-<body class="responsive {% block body_class %}{% endblock %}">
-    <div id="footer-pusher">
-        <div class="header-wrapper">
-            <div class=container>
-                <header id="header" class=row>
+    <body class="min-h-screen container mx-auto bg-gray-100 dark:bg-gray-900 {% block body_class %}{% endblock %}">
+        <div class="flex flex-col justify-center items-center">
+            <div class="header-wrapper">
+                <header id="header" class="self-end">
                     <h1 class="float-left serif"><a class=header-logo-link href=/>
-                        W<span class=ikipendium>ikipendium</span>
-                    </a></h1>
-                    <nav>
-                    {% block nav %}
-                    {% endblock %}
-                    {% if request.user.is_authenticated %}
-        
-    <div class="has-dropdown button-dropdown">
-        <a href=# class=button data-toggle=dropdown><i class="icon icon-prepend green-bg"></i>{{request.user.username}}<span class=caret></span></a>
-        <ul class="dropdown right">
-            <li><a href=/users/{{request.user.username}}/>Profile</a></li>
-            <li><a href=/accounts/password/change/>Change password</a></li>
-            <li><a href=/accounts/email/change/>Change email</a></li>
-            <li><a href=/accounts/logout/>Log out</a></li>
-        </ul>
-    </div>
-                    {% else %}
-                    <a class=button href="/accounts/login/?next={{request.path}}">Log in</a>
-                    {% endif %}
-                    </nav>
+                            W<span class=ikipendium>ikipendium</span>
+                        </a></h1>
+                        <nav>
+                            {% block nav %}
+                            {% endblock %}
+                            {% if request.user.is_authenticated %}
+
+                            <div class="has-dropdown button-dropdown">
+                                <button href=# class=button data-toggle=dropdown><i class="icon icon-prepend green-bg"></i>{{request.user.username}}<span class=caret></span></button>
+                                <ul class="dropdown right">
+                                    <li><button href=/users/{{request.user.username}}/>Profile</button></li>
+                                    <li><button href=/accounts/password/change/>Change password</button></li>
+                                    <li><button href=/accounts/email/change/>Change email</button></li>
+                                    <li><button href=/accounts/logout/>Log out</button></li>
+                                </ul>
+                            </div>
+                            {% else %}
+                            <button class=button href="/accounts/login/?next={{request.path}}">Log in</button>
+                            {% endif %}
+                        </nav>
                 </header>
             </div>
-        </div>
-        <div class="container">
-
-            <div id=content>
-            {% block content %}
-            {% endblock %}
+            <div class="container flex flex-col justify-center align-items-center">
+                {% block content %}
+                {% endblock %}
             </div>
 
         </div>
-        <div id="push"></div>
-    </div>
-    {% block footer %}
-    <footer id="page-footer">
-        <div class="container">
-            <ul class=bottom-menu style=font-variant:small-caps>
-                <li><a href=mailto:contact@wikipendium.no>Contact</a></li>
-                <li><a href=http://twitter.com/wikipendium/>Twitter</a></li>
-                <li><a href=/stats/>Statistics</a></li>
-                <li class=break></li>
-                <li><a href=http://github.com/stianjensen/wikipendium.no/issues>Report a bug</a></li>
-                <li>
-                    <a href=/>Wikipendium</a>
-                    <a href="http://creativecommons.org/licenses/by-sa/3.0/" target="_blank">cc-by-sa</a>
-                </li>
-            </ul>
 
-            <div class=donation-appeal>
-              Wikipendium is ad-free and costs nothing to use.
-              Please help keep Wikipendium alive by donating today!
+        {% block footer %}
+        <footer id="page-footer">
+            <div class="container">
+                <ul class=bottom-menu style=font-variant:small-caps>
+                    <li><a href=mailto:contact@wikipendium.no>Contact</a></li>
+                    <li><a href=http://twitter.com/wikipendium/>Twitter</a></li>
+                    <li><a href=/stats/>Statistics</a></li>
+                    <li class=break></li>
+                    <li><a href=http://github.com/stianjensen/wikipendium.no/issues>Report a bug</a></li>
+                    <li>
+                        <a href=/>Wikipendium</a>
+                        <a href="http://creativecommons.org/licenses/by-sa/3.0/" target="_blank">cc-by-sa</a>
+                    </li>
+                </ul>
 
-              <form
-                action=https://www.paypal.com/cgi-bin/webscr
-                method=post
-                target=_top
-                >
-                <label>
-                  <input
-                    type=radio
-                    name=amount
-                    value="20.00"
-                    />
-                    20 kr
-                </label>
+                <div class=donation-appeal>
+                    Wikipendium is ad-free and costs nothing to use.
+                    Please help keep Wikipendium alive by donating today!
 
-                <label>
-                  <input
-                    type=radio
-                    name=amount
-                    value="50.00"
-                    checked
-                    />
-                    <strong>50 kr</strong>
-                </label>
+                    <form
+                        action=https://www.paypal.com/cgi-bin/webscr
+                        method=post
+                        target=_top
+                        >
+                        <label>
+                            <input
+                                type=radio
+                                name=amount
+                                value="20.00"
+                                />
+                            20 kr
+                        </label>
 
-                <label>
-                  <input
-                    type=radio
-                    name=amount
-                    value="100.00"
-                    />
-                    100 kr
-                </label>
+                        <label>
+                            <input
+                                type=radio
+                                name=amount
+                                value="50.00"
+                                checked
+                                />
+                            <strong>50 kr</strong>
+                        </label>
 
-                <input type=hidden name=cmd value=_donations>
-                <input type=hidden name=business value=donate@wikipendium.no>
-                <input type=hidden name=item_name value="Wikipendium donation">
-                <input type=hidden name=currency_code value=NOK>
-                <div>
-                  <input type=image
-                    src=https://www.paypalobjects.com/en_US/i/btn/btn_donate_SM.gif
-                    border=0
-                    name=submit
-                    alt="PayPal - The safer, easier way to pay online!"
-                    />
+                        <label>
+                            <input
+                                type=radio
+                                name=amount
+                                value="100.00"
+                                />
+                            100 kr
+                        </label>
+
+                        <input type=hidden name=cmd value=_donations>
+                        <input type=hidden name=business value=donate@wikipendium.no>
+                        <input type=hidden name=item_name value="Wikipendium donation">
+                        <input type=hidden name=currency_code value=NOK>
+                        <div>
+                            <input type=image
+                                   src=https://www.paypalobjects.com/en_US/i/btn/btn_donate_SM.gif
+                                   border=0
+                                   name=submit
+                                   alt="PayPal - The safer, easier way to pay online!"
+                                   />
+                        </div>
+                    </form>
+
                 </div>
-              </form>
-
             </div>
-        </div>
-    </footer>
-    {% endblock %}
+        </footer>
+        {% endblock %}
 
+        {% if GOOGLE_ANALYTICS_KEY %}
+        <script>
+            (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+                (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+                    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+            })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
+            ga('create', '{{GOOGLE_ANALYTICS_KEY}}', '{{GOOGLE_ANALYTICS_NAME}}');
+            ga('send', 'pageview');
 
-{% if GOOGLE_ANALYTICS_KEY %}
-<script>
-  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+            ~function() {
+                var lastTimeScrolled = Date.now();
 
-  ga('create', '{{GOOGLE_ANALYTICS_KEY}}', '{{GOOGLE_ANALYTICS_NAME}}');
-  ga('send', 'pageview');
+                window.addEventListener('scroll', function() {
+                    lastTimeScrolled = Date.now();
+                });
 
-  ~function() {
-    var lastTimeScrolled = Date.now();
+                var fiveMinInMs = 5 * 60 * 1000;
+                var thirtyMinutesInMs = 30 * 60 * 1000;
+                setInterval(function() {
+                    ga('send', 'event', (Date.now() - lastTimeScrolled < thirtyMinutesInMs)
+                        ? 'active-on-page'
+                        : 'inactive-on-page');
 
-    window.addEventListener('scroll', function() {
-      lastTimeScrolled = Date.now();
-    });
+                }, fiveMinInMs);
+            }();
+        </script>
+        {% endif %}
 
-    var fiveMinInMs = 5 * 60 * 1000;
-    var thirtyMinutesInMs = 30 * 60 * 1000;
-    setInterval(function() {
-      ga('send', 'event', (Date.now() - lastTimeScrolled < thirtyMinutesInMs)
-                                                         ? 'active-on-page'
-                                                         : 'inactive-on-page');
-
-    }, fiveMinInMs);
-  }();
-</script>
-{% endif %}
-
-</body>
+    </body>
 
 </html>
